--- a/LiteTorrent/UserInterface/WebUI/ui/src/components/ProgressBar.module.css
+++ b/LiteTorrent/UserInterface/WebUI/ui/src/components/ProgressBar.module.css
@@ -6,9 +6,9 @@
 }
 .progressbar-fill{
     height: 100%;
-    width: 75%;
+    width: 50%;
     border-radius: 10px;
-    background: #2ecc71;
+    background-color: #cc2e9a;
     transition: width 0.5s ease-out;
 }
 .progress-label{
