--- a/LiteTorrent/UserInterface/WebUI/ui/src/components/Torrent.module.css
+++ b/LiteTorrent/UserInterface/WebUI/ui/src/components/Torrent.module.css
@@ -1,22 +1,21 @@
-.torrent-list{
-    width:100%;
-    margin-top: 10px;
-}
-
 .torrent{
-    width:100%;
+    width:98%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
     grid-auto-rows: minmax(50px, auto);
-    margin: 10px;
+    margin: 1vw;
     font-size: 15px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     align-items: center;
+    /* padding-left: 10px; */
+    /* padding-right: 10px; */
+    border-radius: 10px;
 }
 
 .title{
     grid-column: 1;
+    padding-left: 10px;
 }
 
 .progressbar{
