Connect Add Torrent button to API

--- a/LiteTorrent/UserInterface/WebUI/ui/src/components/TorrentRow.module.css
+++ b/LiteTorrent/UserInterface/WebUI/ui/src/components/TorrentRow.module.css
@@ -11,6 +11,10 @@
     border-radius: 10px;
 }
 
+.torrent:hover{
+    background-color: #d0d0d0;
+}
+
 .title {
     grid-column: 1;
     padding-left: 10px;
