--- a/LiteTorrent/UserInterface/WebUI/ui/src/components/Navbar.module.css
+++ b/LiteTorrent/UserInterface/WebUI/ui/src/components/Navbar.module.css
@@ -17,10 +17,15 @@
 
 .button-container {
     cursor: pointer;
-    margin: 20px;
+    margin: 13px;
+    padding: 7px;
     background: #4ec199;
-    /* border: 1px #000000; */
-    /* border-style: solid; */
     border-style: none;
     font-size: 20px;
+}
+
+.button-container:hover {
+    border: 1px #000000;
+    border-style: solid;
+    margin: 12px;
 }
