Add Details to Torrents

--- a/LiteTorrent/UserInterface/WebUI/ui/src/components/TorrentFile.module.css
+++ b/LiteTorrent/UserInterface/WebUI/ui/src/components/TorrentFile.module.css
@@ -1,19 +1,14 @@
-.torrent {
-    width: 98%;
+.torrent-file {
+    height: 30px;
+    width: 99%;
     display: grid;
-    height: 50px;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
-    /* grid-auto-rows: minmax(50px, auto); */
-    margin: 1vw;
-    font-size: 15px;
+    margin: 0.5vw;
+    font-size: 12px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     align-items: center;
     border-radius: 10px;
-}
-
-.torrent:hover {
-    background-color: #d0d0d0;
 }
 
 .title {
@@ -23,7 +18,7 @@
 
 .progressbar {
     grid-column: 2;
-    height: 30px;
+    height: 20px;
     border-radius: 10px;
     background: #bcb7ad;
 }
