--- a/LiteTorrent/UserInterface/WebUI/ui/src/components/TorrentClient.module.css
+++ b/LiteTorrent/UserInterface/WebUI/ui/src/components/TorrentClient.module.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 0px;
-    grid-auto-rows: minmax(50px, auto);
+    grid-auto-rows: minmax(25px, auto);
 }
 
 .navbar {
@@ -10,7 +10,7 @@
     grid-row: 1;
 }
 
-.progressbar {
+.torrent-list {
     grid-column: 1 / 4;
-    grid-row: 2;
+    /* grid-row: 2 / 3; */
 }
